# parking-page-detection

./: .gitignore  README.md  duplicated_data.csv  pyproject.toml  simple_data.csv
IP_mistake/: mistake_duplicated_data.csv  mistake_simple_data.csv  pp_uuids.txt
correlation_analysis/: correlation_matrix_additional.csv  correlation_matrix_full.csv  correlation_matrix_selected_captures.csv
feature_selection/: feature_selection_full.csv  feature_selection_results.csv
parking_page_detection/: Warninglist_model.py  correlation_analysis.py  feature_importance.py  feature_selection.py  feature_selection_evaluation.py  test.py
results/: evalutaion_results.csv  evalutaion_results_table.tex  feature_importance_output.txt  present_evaluation_results.tex
results/first_try/: results_present.tex  results_table.tex
scripts/: correct_dataset.py  present_latex.py  stats.py
